<resources>
    <string name="app_name">Loan Tracker by Caffeine Overflow</string>
    <string name="home_page_main_text">Home</string>
    <string name="home_action_label">Home</string>

    <string name="activity2_name">Contact</string>
    <string name="debts_page">Debts Page</string>
    <string name="display_debts">Debts</string>
    <string name="test">test test test test test test test test test test</string>
    <string name="contacts">Contacts:</string>
    <string name="category1">Category</string>
    <string name="create_budget">create budget</string>
    <string name="category4">Category</string>
    <string name="category3">Category</string>
    <string name="category2">Category</string>
    <string name="button_reason_label">These Buttons Take You to the Page it Indicates. Or You Can Use the Navigation or Nav Icons.</string>
    <string name="about_app_label">About the App:</string>
    <string name="the_app_label">A Financial App made by Caffeine Overflow. In this app you can: Create a Budget, Create Contacts, Keep Track of Any Debts. A Sales Tax and Tip Calculator are also integrated
    into the app. Finally, there is an in-app day or night mode feature.</string>

    <!-- Buttons -->
    <string name="button_contact_page">Contacts</string>
    <string name="button_budget_submit">Budget</string>
    <string name="button_submit">Submit</string>

    <!-- Sales Tax Calculator Strings -->
    <string name="tax_amount_hint">0.0%</string>
    <string name="calc_total_label">Cost of Item(s):</string>
    <string name="state_sale_tax_label">State Salex Tax:</string>

    <!-- Tip Calculator -->
    <string name="tip_amount_label">Tip Amount:</string>
    <string name="seekBar_tip_label">25%</string>
    <string name="seekBar_hint">You need to move the Seek Bar Thumb before calculating.</string>

    <!-- Contact Page Strings -->
    <string name="action_contact_main_label">Contacts</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="credit_info_label">Creditor Information</string>
    <string name="debt_info_label">Debtor Information</string>
    <string name="contact_amount_label">Use (-) If You Owe Money, Use (+) If Someone Owes You Money</string>
    <string name="total_amount_hint">Total (USD)</string>
    <string name="contact_main_label">Contacts</string>
    <string name="contact_user_info_submit">Submit</string>
    <string name="email_hint">email@email.com</string>
    <string name="phone_number_hint">000-000-0000</string>
    <string name="contact_phone_number">Phone Number:</string>
    <string name="contact_email">Email:</string>

    <!-- Night/Day Mode String -->
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="logo_description">Green circle with backwards dollar sign inside</string>


    <string-array name="labels_array">
        <item>Contact1</item>
        <item>Contact2</item>
        <item>Contact3</item>
        <item>Contact4</item>
    </string-array>
</resources>
